--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "build": "rimraf src && tslint -c tslint.json -p . *.ts && tsc"
+    "prepare": "rimraf src && tslint -c tslint.json -p . *.ts && tsc"
   },
   "repository": {
     "type": "git",
