sometimes I hate npm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "esModuleInterop": true,
         "moduleResolution": "node",
         "module": "commonjs",
-        "declaration": true,
+        "declaration": true
     },
     "include": [
         "**/*"
